# tutorials

./: .gitignore  README.md
AnaTutorial/: README.md
AnaTutorial/macro/: Fun4All_AnaTutorial.C  Fun4All_AnaTutorial_DSTReadBack.C  Fun4All_AnaTutorial_Jets.C  G4Setup_EICDetector.C  (+3 more)
CaloDataAnaRun24pp/: README
CreateSubsysRecoModule/: README.md
HEPData/: CreateSubmission.ipynb  CreateSubmission.py  GenerateDummyTree.ipynb  README.md  spectrum_output.root
IonGun/: DisplayOn.C  Fun4All_G4_IonGun.C  GlobalVariables.h  README.md  iongun.mac
JupyterLab/: README.md  example_tpc_testbeam2019_jsroot.ipynb  example_tpc_testbeam2019_python.ipynb  example_tpc_testbeam2019_root.ipynb
MDC2_Jets/: .gitignore
Momentum/: DisplayOn.C  Fun4All_G4_Momentum.C  Fun4All_G4_Momentum_Projection.C  Fun4All_G4_Momentum_Projection_Calorimeters.C  Fun4All_G4_Momentum_Projection_Detectors.C  README.md  init_gui_vis.mac  vis.mac
MyOwnTTree/: README  README.md
MyOwnTTree/src/: AnalyzeSimpleTree.cc  AnalyzeSimpleTree.h  AnalyzeSimpleTreeLinkDef.h  MakeSimpleTree.cc  MakeSimpleTree.h  MakeSimpleTreeLinkDef.h  Makefile.am  MySimpleTree.cc  MySimpleTree.h  MySimpleTreeLinkDef.h  MyTClonesArray.cc  MyTClonesArray.h  MyTClonesArrayLinkDef.h  MyTreeLinkDef.h  configure.ac  configure.in
PHG4DSTReader/: Example.C
TowerInfoExample/: Fun4All_TowerBuilder.C  productionFiles-PYTHIA8_PP_MB-dst_calo_cluster-00000.list  productionFiles-PYTHIA8_PP_MB-dst_tracks-00000.list  productionFiles-PYTHIA8_PP_MB-dst_vertex-00000.list
block/: DisplayOn.C  Fun4All_G4_block.C  G4HitTTree.C  MyHitTTree.C  block.mac
clusters/: Fun4All_G4_Clusters.C  G4TTree.C
cylinder/: DisplayOn.C  Fun4All_G4_Cylinder.C  G4HitTTree.C  MyHitTTree.C  cyl.mac
eventgenerator_display/: Fun4All_Generator_Display.C  README.md  vis.mac
materialscan/: Fun4All_G4_sPHENIX.C  README  README.md  matscan.C  matscan_digest.pl  plot_matscan.C
myjetanalysis/: .gitignore  MyJetAnalysis.cc  MyJetAnalysis.h  README.md  configure.ac  readme.md
sPHENIX_sims/: Calib.h  Fun4All_G4_sPHENIX.C  vis.mac
(+86 files in other folders)
